# claude-dev-env

./: CLAUDE.md  README.md  bootstrap.sh  cc.sh  clone.sh  d.sh  decisions.md  git-worktree-fix-decisions.md  install-commands.sh  screenshot-integration-decisions.md  seed.sh  setup.sh  unseed.sh  up.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
docs/adr/: 0001-seed-first-scope.md  0002-repo-topology.md  0003-devcontainers-no-custom-orchestration.md  0004-seed-cli-script-not-a-registry.md  0005-config-delivery-postcreatecommand-bootstrap.md  0006-claude-md-stub-and-skills-bind-mount.md  0007-host-clone-bind-mounted-for-write-back.md  0008-credentials-ssh-agent-and-mounted-creds.md  0009-claude-state-mounted-per-project.md  0010-permissions-layering-two-files.md  0011-existing-projects-manual-bootstrap.md  0012-clone-is-a-separate-command.md  0013-clone-project-name-from-repo-basename.md  0014-clone-injected-files-left-untracked.md  0015-clone-always-overwrites-devcontainer.md  0016-clone-injects-devcontainer-and-claude-only.md  0017-clone-resumes-if-project-exists.md  0018-clone-command-name.md  0019-screenshots-via-file-not-clipboard.md  0020-screenshots-non-default-save-to-destination.md  0021-screenshots-single-global-folder.md  0022-screenshots-mounted-read-write.md  (+7 more)
general/: CLAUDE.md  settings.json
templates/python/: .gitignore  .nvim.lua  pyproject.toml  pyrefly.toml
templates/python/.claude/: settings.local.json
templates/python/.devcontainer/: devcontainer.json  setup.sh
templates/python/tests/: test_greet.py
(+9 files in other folders)
